--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,38 @@
-fastapi==0.110.2
-uvicorn[standard]==0.29.0
-pydantic==2.7.1
-python-dotenv==1.0.1
-openai==1.30.1
-httpx==0.27.0
-pytest==8.2.2
-pytest-asyncio==0.23.7
-anyio==4.4.0
+annotated-types==0.7.0
+anyio==4.9.0
+asyncio==3.4.3
+asyncpg==0.30.0
+certifi==2025.7.14
+click==8.2.1
+colorama==0.4.6
+Deprecated==1.2.18
+distro==1.9.0
+fastapi==0.116.1
+greenlet==3.2.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+jiter==0.10.0
+limits==5.4.0
+logging==0.4.9.6
+openai==1.97.0
+packaging==25.0
+pluggy==1.6.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==8.4.1
+pytest-asyncio==1.1.0
+python-dotenv==1.1.1
 redis==6.2.0
 slowapi==0.1.9
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.47.2
+tqdm==4.67.1
+typing_extensions==4.14.1
+typing-inspection==0.4.1
+uvicorn==0.35.0
+wrapt==1.17.2
