--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.4
 annotated-types==0.7.0
 anyio==4.9.0
 asyncio==3.4.3
@@ -17,9 +18,13 @@ iniconfig==2.1.0
 jiter==0.10.0
 limits==5.4.0
 logging==0.4.9.6
+Mako==1.3.10
+Markupsafe==3.0.2
 openai==1.97.0
 packaging==25.0
+pip==25.1.1
 pluggy==1.6.0
+psycopg2==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
