--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,11 +4,15 @@ anyio==4.9.0
 asgi-lifespan==2.1.0
 asyncio==3.4.3
 asyncpg==0.30.0
+bcrypt==3.2.2
 certifi==2025.7.14
+cffi==1.17.1
 click==8.2.1
 colorama==0.4.6
+cryptography==45.0.5
 Deprecated==1.2.18
 distro==1.9.0
+ecdsa==0.19.1
 fastapi==0.116.1
 greenlet==3.2.3
 h11==0.16.0
@@ -20,19 +24,26 @@ jiter==0.10.0
 limits==5.4.0
 logging==0.4.9.6
 Mako==1.3.10
-Markupsafe==3.0.2
+MarkupSafe==3.0.2
 openai==1.97.0
 packaging==25.0
+passlib==1.7.4
 pip==25.1.1
 pluggy==1.6.0
-psycopg2-binary==2.9.10
+psycopg2==2.9.10
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.1
 pytest-asyncio==1.1.0
 python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
 redis==6.2.0
+rsa==4.9.1
+six==1.17.0
 slowapi==0.1.9
 sniffio==1.3.1
 SQLAlchemy==2.0.41
